unpackaged/main/default/objects/zkmulti__MCQueued_Shipment__c/zkmulti__MCQueued_Shipment__c.object-meta.xml
<CustomObject>
    <label>Queued Shipment</label>
    <nameField>
        <displayFormat>Queued-Shipment-{00000000}</displayFormat>
        <label>Queued Shipment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Queued Shipments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>