unpackaged/main/default/objects/zkmulti__MCQueued_Shipment__c/fields/zkmulti__Bulk_Shipment__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Bulk_Shipment__c</fullName>
    <label>Bulk Shipment</label>
    <referenceTo>zkmulti__MCBulk_Shipment__c</referenceTo>
    <relationshipName>Queued_Shipments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>