unpackaged/main/default/objects/zkmulti__MCQueued_Shipment__c/fields/zkmulti__Custom_Address_Source__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Custom_Address_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Custom Address Source</label>
    <referenceTo>zkmulti__MCCustom_Address_Source__c</referenceTo>
    <relationshipName>Queued_Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>