unpackaged/main/default/objects/zkmulti__MCQueued_Shipment__c/fields/zkmulti__Custom_Address_Source_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Custom_Address_Source_Record_ID__c</fullName>
    <label>Custom Address Source Record ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>