unpackaged/main/default/objects/zkmulti__MCQueued_Shipment__c/fields/zkmulti__Queued_Shipment_Special_Services__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Queued_Shipment_Special_Services__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Queued Shipment Special Services</label>
    <referenceTo>zkmulti__MCQueued_Shipment_Special_Services__c</referenceTo>
    <relationshipName>Queued_Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>