unpackaged/main/default/objects/zkmulti__MCQueued_Shipment__c/fields/zkmulti__Recipient_Lead__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Recipient_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recipient Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>Queued_Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>