unpackaged/main/default/objects/zkmulti__MCQueued_Shipment__c/fields/zkmulti__Recipient_Street__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Recipient_Street__c</fullName>
    <label>Recipient Street</label>
    <type>TextArea</type>
</CustomField>