unpackaged/main/default/objects/zkmulti__MCQueued_Shipment__c/fields/zkmulti__Reference__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Reference__c</fullName>
    <label>Reference</label>
    <length>35</length>
    <type>Text</type>
</CustomField>