unpackaged/main/default/objects/zkmulti__MCQueued_Shipment__c/fields/zkmulti__Service_Type__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Service_Type__c</fullName>
    <label>Service Type</label>
    <length>35</length>
    <type>Text</type>
</CustomField>