unpackaged/main/default/objects/zkmulti__MCQueued_Shipment__c/fields/zkmulti__Weight_Units__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Weight_Units__c</fullName>
    <label>Weight Units</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>